# SparrowDB

./: .gitignore  ACCEPTANCE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  sparrowdb_audit.md  sparrowdb_structural_audit.md
crates/sparrow-ontology/: Cargo.toml  README.md
crates/sparrow-ontology/src/: error.rs  lib.rs  schema.rs  validation.rs
crates/sparrowdb/: Cargo.toml
crates/sparrowdb-bench/: Cargo.toml
crates/sparrowdb-bench/benches/: ldbc_snb.rs  mlm_benchmark.rs  pole_bench.rs  reactome_bench.rs
crates/sparrowdb-bench/fixtures/ldbc/mini/dynamic/: comment_0_0.csv  comment_hasCreator_person_0_0.csv  comment_replyOf_post_0_0.csv  forum_0_0.csv  forum_hasMember_person_0_0.csv  person_0_0.csv  person_isLocatedIn_place_0_0.csv  person_knows_person_0_0.csv  person_likes_post_0_0.csv  person_workAt_organisation_0_0.csv  post_0_0.csv  post_hasCreator_person_0_0.csv  post_hasTag_tag_0_0.csv
crates/sparrowdb-bench/fixtures/ldbc/mini/static/: organisation_0_0.csv  organisation_isLocatedIn_place_0_0.csv  place_0_0.csv  tag_0_0.csv  tag_hasType_tagclass_0_0.csv  tagclass_0_0.csv
crates/sparrowdb-bench/src/: ic_queries.rs  ldbc.rs  lib.rs  main.rs  mlm.rs  realworld.rs
crates/sparrowdb-bench/tests/: ldbc_ic_test.rs  ldbc_loader_test.rs
crates/sparrowdb-bolt/: Cargo.toml
crates/sparrowdb-bolt/src/: handler.rs  lib.rs  main.rs  packstream.rs
crates/sparrowdb-bolt/tests/: bolt_integration.rs
crates/sparrowdb-catalog/: Cargo.toml
crates/sparrowdb-catalog/src/: catalog.rs  lib.rs  tlv.rs  types.rs
crates/sparrowdb-cli/: Cargo.toml
crates/sparrowdb-cli/src/: main.rs
crates/sparrowdb-cli/tests/: cli_tests.rs
crates/sparrowdb-common/: Cargo.toml
crates/sparrowdb-common/src/: lib.rs
crates/sparrowdb-cypher/: Cargo.toml
crates/sparrowdb-cypher/src/: ast.rs  binder.rs  lexer.rs  lib.rs  parser.rs
crates/sparrowdb-cypher/tests/: binder_tests.rs  parser_tests.rs
crates/sparrowdb-execution/: Cargo.toml
crates/sparrowdb-execution/src/: chunk.rs  engine.rs  functions.rs  join.rs  join_spill.rs  json.rs  lib.rs  operators.rs  parallel_bfs.rs  pipeline.rs  sort_spill.rs  types.rs
crates/sparrowdb-execution/src/engine/: aggregate.rs  expr.rs  hop.rs  mod.rs  mutation.rs  path.rs  pipeline_exec.rs  procedure.rs  scan.rs  subquery.rs
crates/sparrowdb-execution/tests/: join_tests.rs  parallel_bfs_test.rs  pipeline_tests.rs  pipeline_tests_extended.rs  pipeline_tests_phase2.rs  pipeline_tests_phase3.rs  pipeline_tests_phase4.rs  scan_tests.rs
crates/sparrowdb-mcp/: Cargo.toml
crates/sparrowdb-mcp/src/: main.rs
crates/sparrowdb-metrics/: Cargo.toml
crates/sparrowdb-metrics/src/: lib.rs
crates/sparrowdb-node/: Cargo.toml
crates/sparrowdb-node/src/: lib.rs
crates/sparrowdb-python/: Cargo.toml  pyproject.toml
crates/sparrowdb-python/src/: lib.rs
crates/sparrowdb-python/tests/python/: test_smoke.py
crates/sparrowdb-ruby/: .gitignore  Cargo.toml  Gemfile  Rakefile  extconf.rb  sparrowdb.gemspec
crates/sparrowdb-ruby/.cargo/: config.toml
crates/sparrowdb-ruby/lib/: sparrowdb.rb
crates/sparrowdb-ruby/spec/: sparrowdb_spec.rb
crates/sparrowdb-ruby/src/: lib.rs
crates/sparrowdb-server/: Cargo.toml
crates/sparrowdb-server/src/: auth.rs  handlers.rs  lib.rs  main.rs  server.rs
crates/sparrowdb-server/tests/: http_integration.rs
crates/sparrowdb-storage/: Cargo.toml
crates/sparrowdb-storage/benches/: storage_benchmarks.rs
crates/sparrowdb-storage/examples/: gen_fixture.rs
crates/sparrowdb-storage/src/: csr.rs  edge_store.rs  encryption.rs  fts_index.rs  fulltext_index.rs  lib.rs  maintenance.rs  metapage.rs  node_store.rs  property_index.rs  text_index.rs  vector_index.rs
crates/sparrowdb-storage/src/wal/: codec.rs  migrate.rs  mod.rs  replay.rs  writer.rs
crates/sparrowdb-storage/tests/: encrypted_page_fixture_tests.rs  encryption_tests.rs  wal_crash_failpoints.rs  wal_encryption_tests.rs
crates/sparrowdb/benches/: README.md  batch_benchmarks.rs  graph_benchmarks.rs  pipeline_phase2_benchmarks.rs  property_index_benchmarks.rs  snap_benchmarks.rs
crates/sparrowdb/src/: batch.rs  bulk.rs  db.rs  export.rs  helpers.rs  lib.rs  read_tx.rs  types.rs  wal_codec.rs  write_tx.rs
crates/sparrowdb/tests/: acceptance.rs  call_subquery.rs  cypher_range_function_test.rs  debug_case_when.rs  debug_so_subclass.rs  delete_edge.rs  export_import.rs  fts_index.rs  gap_10_parameterized_queries.rs  gen_fixtures_test.rs  hybrid_search.rs  match_after_create.rs  match_property_index.rs  mcp_cypher_templates.rs  merge_node.rs  path_semantics.rs  phase5_maintenance.rs  phase5_swmr.rs  phase7_mutation.rs  property_range_index.rs  readtx_query.rs  regression_355.rs  regression_363.rs  regression_364.rs  regression_366.rs  regression_367.rs  regression_368.rs  regression_369.rs  regression_372.rs  regression_373.rs  regression_379.rs  regression_380.rs  regression_real_world.rs  reverse_arrow_294.rs  spa157_cypher_mutations.rs  spa163_164_read_path.rs  spa191_rel_type_persistence.rs  spa_100_order_by_spill.rs  spa_101_join_spill.rs  spa_105_golden_fixtures.rs  (+120 more)
docs/: api-reference.md  architecture-audit.md  architecture.md  benchmark-datasets.md  bindings.md  bolt-server.md  cypher-reference.md  design-decisions.md  getting-started.md  mcp-setup.md  performance-roadmap.md  quickstart.md  use-cases.md
reviews/: pr_335_review.md
scripts/: README.md  bench-compare.py  generate_fixtures.py  impl-agent-prompt.md  neo4j_import.py  orchestrator.sh  shadow_runner.py  sync-versions.sh  test_import_roundtrip.py  visualize.py  worktree-create.sh  worktree-remove.sh
specs/: 289-multi-label-nodes.md  290-call-subqueries.md  291-http-sse-transport.md  292-publish-sparrowontology.md  296-bulk-csv-loader.md  299-chunked-pipeline-final.md  299-chunked-pipeline-phases-2-4-contrarian.md  299-chunked-pipeline-phases-2-4-enhanced.md  299-chunked-pipeline-phases-2-4.md  299-chunked-pipeline-v2-final.md  299-chunked-pipeline-v3-final.md  implementation-plan-v1.md  kms-replacement-spec.md  sparrowdb-v3-implementation-spec.md  (+1 more)
(+20 files in other folders)
