[workspace]
resolver = "2"
members = [
    "crates/sparrowdb-common",
    "crates/sparrowdb-storage",
    "crates/sparrowdb-catalog",
    "crates/sparrowdb-cypher",
    "crates/sparrowdb-execution",
    "crates/sparrowdb",
    "crates/sparrowdb-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Rich Yaker"]
repository = "https://github.com/ryaker/SparrowDB"

[workspace.dependencies]
sparrowdb-common = { path = "crates/sparrowdb-common" }
sparrowdb-storage = { path = "crates/sparrowdb-storage" }
sparrowdb-catalog = { path = "crates/sparrowdb-catalog" }
sparrowdb-cypher  = { path = "crates/sparrowdb-cypher" }
sparrowdb-execution = { path = "crates/sparrowdb-execution" }
sparrowdb = { path = "crates/sparrowdb" }
tempfile  = "3"
crc32fast = "1"
crc32c    = "0.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
