[workspace]
resolver = "2"
members = [
    "crates/sparrowdb-common",
    "crates/sparrowdb-storage",
    "crates/sparrowdb-catalog",
    "crates/sparrowdb-cypher",
    "crates/sparrowdb-execution",
    "crates/sparrowdb",
    "crates/sparrowdb-python",
    "crates/sparrowdb-cli",
    "crates/sparrowdb-mcp",
    "crates/sparrowdb-node",
    "crates/sparrowdb-metrics",
    "crates/sparrowdb-bench",
    "crates/sparrowdb-ruby",
]

[workspace.package]
version = "0.1.17"
edition = "2021"
license = "MIT"
authors = ["Rich Yaker"]
repository = "https://github.com/ryaker/SparrowDB"
documentation = "https://docs.rs/sparrowdb"
readme = "README.md"

[workspace.dependencies]
sparrowdb-common = { path = "crates/sparrowdb-common", version = "0.1.17" }
sparrowdb-storage = { path = "crates/sparrowdb-storage", version = "0.1.17" }
sparrowdb-catalog = { path = "crates/sparrowdb-catalog", version = "0.1.17" }
sparrowdb-cypher  = { path = "crates/sparrowdb-cypher", version = "0.1.17" }
sparrowdb-execution = { path = "crates/sparrowdb-execution", version = "0.1.17" }
sparrowdb = { path = "crates/sparrowdb", version = "0.1.17" }
sparrowdb-metrics = { path = "crates/sparrowdb-metrics", version = "0.1.17" }
tiny_http         = "0.12"
tempfile          = "3"
crc32fast         = "1"
crc32c            = "0.6"
chacha20poly1305  = "0.10"
roaring           = "0.10"
criterion         = { version = "0.5", features = ["html_reports"] }
rand              = { version = "0.8", features = ["small_rng"] }
rand_chacha       = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
bincode           = "1"
clap              = { version = "4", features = ["derive"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv               = "1"
rayon             = "1.8"
memmap2           = "0.9"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
