[package]
name = "sparrowdb-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Schema catalog (labels, properties, rel-types) for SparrowDB"
documentation = "https://docs.rs/sparrowdb-catalog"
readme.workspace = true
keywords = ["graph", "database", "schema", "catalog", "embedded"]
categories = ["database", "data-structures"]

[dependencies]
sparrowdb-common = { workspace = true }
sparrowdb-storage = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
