[package]
name = "sparrowdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for SparrowDB embedded graph database"
publish = false

[[bin]]
name = "sparrowdb"
path = "src/main.rs"

[dependencies]
sparrowdb = { workspace = true }
sparrowdb-execution = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
