[package]
name = "sparrowdb-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types and primitives for SparrowDB embedded graph database"
documentation = "https://docs.rs/sparrowdb-common"
readme.workspace = true
keywords = ["graph", "database", "embedded", "nosql"]
categories = ["database", "data-structures"]

[dependencies]
crc32fast = { workspace = true }
serde     = { workspace = true }
