[package]
name = "sparrowdb-cypher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sparrowdb-common  = { workspace = true }
sparrowdb-catalog = { workspace = true }

[dev-dependencies]
sparrowdb-catalog = { workspace = true }
tempfile = { workspace = true }
