[package]
name = "sparrowdb-cypher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cypher query parser and planner for SparrowDB"
documentation = "https://docs.rs/sparrowdb-cypher"
readme.workspace = true
keywords = ["graph", "cypher", "query", "parser", "database"]
categories = ["database", "parser-implementations"]

[dependencies]
sparrowdb-common  = { workspace = true }
sparrowdb-catalog = { workspace = true }

[dev-dependencies]
sparrowdb-catalog = { workspace = true }
tempfile = { workspace = true }
