[package]
name = "sparrowdb-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sparrowdb-common  = { workspace = true }
sparrowdb-storage = { workspace = true }
sparrowdb-catalog = { workspace = true }
sparrowdb-cypher  = { workspace = true }
roaring = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
