[package]
name = "sparrowdb-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sparrowdb-common  = { workspace = true }
sparrowdb-storage = { workspace = true }
sparrowdb-catalog = { workspace = true }
sparrowdb-cypher  = { workspace = true }
roaring   = { workspace = true }
tempfile  = { workspace = true }
bincode   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
