[package]
name = "sparrowdb-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Query execution engine for SparrowDB embedded graph database"
documentation = "https://docs.rs/sparrowdb-execution"
readme.workspace = true
keywords = ["graph", "database", "execution", "query", "embedded"]
categories = ["database", "data-structures"]

[dependencies]
sparrowdb-common  = { workspace = true }
sparrowdb-storage = { workspace = true }
sparrowdb-catalog = { workspace = true }
sparrowdb-cypher  = { workspace = true }
roaring   = { workspace = true }
tempfile  = { workspace = true }
bincode   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
tracing   = { workspace = true }
rayon     = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
