[package]
name = "sparrowdb-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server adapter for SparrowDB embedded graph database"
publish = false

[[bin]]
name = "sparrowdb-mcp"
path = "src/main.rs"

[dependencies]
sparrowdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
