[package]
name = "sparrowdb-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sparrowdb = { path = "../sparrowdb" }
sparrowdb-execution = { path = "../sparrowdb-execution" }
serde_json = "1"
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
