[package]
name = "sparrowdb-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js (N-API) bindings for SparrowDB embedded graph database"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
sparrowdb = { workspace = true }
sparrowdb-execution = { workspace = true }
serde_json = { workspace = true }
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
