[package]
name = "sparrowdb-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for SparrowDB embedded graph database"
publish = false

[lib]
name = "sparrowdb_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:sparrowdb", "dep:sparrowdb-execution"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"], optional = true }
sparrowdb = { workspace = true, optional = true }
sparrowdb-execution = { workspace = true, optional = true }
