[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "sparrowdb"
version = "0.1.0"
description = "Python bindings for SparrowDB embedded graph database"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["graph", "database", "embedded", "cypher"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[tool.maturin]
features = ["python"]
module-name = "sparrowdb"
