[package]
name = "sparrowdb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sparrowdb-common = { workspace = true }
crc32c    = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "storage_benchmarks"
harness = false
