[package]
name = "sparrowdb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage engine (WAL, node store, edge store, CSR) for SparrowDB"
documentation = "https://docs.rs/sparrowdb-storage"
readme.workspace = true
keywords = ["graph", "database", "storage", "wal", "embedded"]
categories = ["database", "filesystem"]

[dependencies]
sparrowdb-common  = { workspace = true }
crc32c            = { workspace = true }
crc32fast         = { workspace = true }
chacha20poly1305  = { workspace = true }
rand              = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "storage_benchmarks"
harness = false
