[package]
name = "sparrowdb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sparrowdb-common    = { workspace = true }
sparrowdb-storage   = { workspace = true }
sparrowdb-catalog   = { workspace = true }
sparrowdb-cypher    = { workspace = true }
sparrowdb-execution = { workspace = true }
rand                = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
clap                = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
serde_json = { workspace = true }
