[package]
name = "sparrowdb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embedded graph database with Cypher queries — no server, no subscription, no cloud"
documentation = "https://docs.rs/sparrowdb"
readme.workspace = true
keywords = ["graph", "database", "cypher", "embedded", "nosql"]
categories = ["database", "data-structures"]

[dependencies]
sparrowdb-common    = { workspace = true }
sparrowdb-storage   = { workspace = true }
sparrowdb-catalog   = { workspace = true }
sparrowdb-cypher    = { workspace = true }
sparrowdb-execution = { workspace = true }
rand                = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
clap                = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
tempfile        = { workspace = true }
serde_json      = { workspace = true }
criterion       = { workspace = true }
crc32fast       = { workspace = true }
sparrowdb-bench = { path = "../sparrowdb-bench" }

[[bin]]
name = "sparrowdb-mcp"
path = "src/bin/sparrowdb-mcp.rs"

[[bin]]
name = "gen-encrypted-fixture"
path = "src/bin/gen-encrypted-fixture.rs"

[[bench]]
name    = "graph_benchmarks"
harness = false

[[bench]]
name    = "batch_benchmarks"
harness = false

[[bench]]
name    = "property_index_benchmarks"
harness = false
